# ai-agent-alchemy

./: .clinerules  .env  .env.example  .gitignore  CHANGELOG.md  COMPLETE_SYSTEM_STATUS.md  CUSTOM_UI_GUIDE.md  DOCUMENTATION_INDEX.md  FINAL_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  LEANN_SELF_IMPROVEMENT_SUCCESS.md  PLUGIN_ROUTING_FIX_COMPLETE.md  PRODUCTION_READY.md  README.md  SELF_IMPROVEMENT_VERIFIED.md  SYSTEM_PROMPT_INTEGRATION_SUMMARY.md  USAGE_GUIDE.md  WINDOWS_COMMANDS.md  corrected_analysis.json  debug_plugin_question_webui.py  debug_plugin_routing.py  direct_cache_override.py  final_cache_solution.py  fix_browser_permanently.py  fix_leann_integration.py  force_fresh_analysis.py  leann_analysis_override.py  leann_permanent_patch.py  mkdocs.yml  plan.md  pyproject.toml  server_logs.txt  simple_test.py  spec.md  start_custom_ui.py  test_all_plugins.py  test_api_simple.py  test_async_results.py  test_browser_news.py  test_cli_manual.py  (+15 more)
.github/: CODEOWNERS
.github/workflows/: cicd-pipeline.yml  typecheck.yml
analysis/overrides/: definitive_analysis_override.json
config/: mcp_tools.json
docs/: ARTIFACTS_GUIDE.md  ASYNC_MIGRATION_GUIDE.md  BITDEFENDER_CONFIGURATION.md  BROWSER_BUG_FIX.md  BROWSER_IMPROVEMENTS.md  BROWSER_IMPROVEMENTS_SUMMARY.md  CRAWL4AI_GUIDE.md  ENHANCED_NEWS_SYSTEM.md  LEANN_INTEGRATION.md  MODULE_SPLIT_PROPOSAL.md  SYSTEM_PROMPT_INTEGRATION.md  TROUBLESHOOTING.md  TYPING_TOOLCHAIN_DECISION.md  index.md
docs/api/: agent-core.md
docs/archive/: ALL_TOOLS_REFERENCE.md  AUTONOMOUS_AGENT_GUIDE.md  NEWS_SYSTEM_COMPLETE.md  OPERATIONS_MANUAL.md  tasks.md
docs/reports/: plugin_inventory.json  repo_baseline.json  repo_baseline.md
docs/roadmap/: async_test_migration.md  module_split_plan.md  typing_strategy.md
memory/: sessions.json
scripts/: codebase_analyzer.py  test_analyzer_fixes.py
scripts/examples/: example_enhanced_news.py
scripts/maintenance/: direct_cache_override.py  final_cache_solution.py  fix_leann_integration.py  force_fresh_analysis.py  leann_analysis_override.py  leann_permanent_patch.py  verify_improvements.py  verify_structured_logging.py
scripts/manual/: start_custom_ui.py
scripts/reporting/: generate_repo_baseline.py
src/agent/: api.py  artifacts.py  async_tracker.py  cli.py  core.py  errors.py  logging_utils.py  mcp_loader.py  memory.py  metrics.py  models.py  plugin_executor.py  react_codebase_analyzer.py  react_loop.py  react_metrics.py  react_question_detector.py  react_responses.py  react_tool_parser.py  retry_utils.py  server.py  system_prompt.py  web_ui.py
src/plugins/: analysis.py  analysis.pyi  browser.py  crawl4ai_plugin.py  crawl4ai_plugin.pyi  enhanced_news.py  enhanced_news.pyi  enhanced_news_components.py  kokoro_tts.py  leann_plugin.py  leann_plugin.pyi  news_fetch.py  news_fetch.pyi  search.py  search.pyi  time_utils.py  time_utils.pyi
tests/: conftest.py  debug
tests/contract/: test_cli_add_tool.py  test_cli_run.py
tests/integration/: test_all_mcp_tools.py  test_all_plugins.py  test_comprehensive_news.py  test_memory.py  test_session_start.py  test_tool_execution.py
tests/regression/: simple_test.py  test_improvements.py  (+1 more)
(+57 files in other folders)
