[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-ai-agent"
version = "0.1.0"
description = "Modular CLI AI Agent with MCP Integration"
authors = [{name = "AI Assistant", email = "ai@example.com"}]
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pytest>=7.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "pytz>=2023.3",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "feedparser>=6.0.10",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest-cov",
    "pytest-mock",
]

[project.scripts]
agent = "agent.cli:cli_app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
